--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webbteknik 3 - 1ME323</title>
+    <link rel="stylesheet" href="/global.css">
+    <script src="main.js" type="module"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Webbteknik 3</h1>
+        <h2>1ME323</h2>
+        <nav id="navigation"></nav>
+    </header>
 </body>
 </html>
