--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webbteknik 3 - 1ME323</title>
     <link rel="stylesheet" href="/global.css">
-    <script src="main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
+    
 </head>
+
 <body>
     <header>
-        <h1>Webbteknik 3</h1>
-        <h2>1ME323</h2>
+        <h1>Webbteknik 3 --- 1ME323</h1>
         <nav id="navigation"></nav>
     </header>
+
+    <main>
+        <section id="card-cont" class="grid-layout">
+
+        </section>
+    </main>
 </body>
+
 </html>
