Images comprimised nad fixed. Html for assignment 2 is done. and some changes to clothes.js added.

--- a/assignment1/assignment2.html
+++ b/assignment1/assignment2.html
@@ -14,22 +14,27 @@
         <h1>Webbteknik 3 --- 1ME323</h1>
         <nav id="navigation"></nav>
     </header>
-
-    <div class="shop-cont">
-        <main>
-            <section id="shop-grid" class="grid-layout">
-
-            </section>
-        </main>
-
-        <aside>
+<aside>
             <h2>Kundvagn</h2>
+            <ul id="cartItems">
+
+            </ul>
             <div id="cart">
             </div>
             <p>Total: 
                 <span id="total">0</span>kr</p>
                 <button id="clear" class="btn-clear">Töm kundvagnen</button>
         </aside>
+    <div class="shop-cont">
+
+        
+        <main>
+            <section id="shop-grid" class="grid-layout">
+
+            </section>
+        </main>
+
+        
     </div>
 
 </body>
