map structure adjusted and seperate css files created for assignment1 and 2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
         </section>
     </main>
+
+    <footer>
+        <p>Skapad av: Stellan Benckert</p>
+        <p>Kurs: Webbteknik 3 - 1ME323</p>
+        <p>Användarnamn: B0nken</p>
+    </footer>
 </body>
 
 </html>
