--- a/assignment2/assignment2.html
+++ b/assignment2/assignment2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../global.css">
     <script src="../js/main.js" type="module"></script>
     <script src="../js/shop.js" type="module"></script>
+    <link rel="stylesheet" href="shop.css">
 </head>
 <body>
     
