footer added to all files and css for footer and assignment1 adjusted

--- a/assignment1/assignment1.html
+++ b/assignment1/assignment1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../global.css">
     <script src="../js/main.js" type="module"></script>
     <script src="../js/assignment.js" type="module"></script>
+    <link rel="stylesheet" href="assignment1.css">
 </head>
 <body>
     
@@ -16,9 +17,17 @@
     </header>
 
     <main>
-        <h2>Beskrivning av uppgift</h2>
-        <p></p>
+        <h2>Uppgift 1: Landningssida</h2>
+        <p>
+            Denna uppgift hade som syfte att skapa en struktur för en hemsida där framtida uppgifter i kursen Webbteknik 3 (1ME323) kan läggas till. Sidan använder sig av en dynamisk navigation.
+        </p>
     </main>
+
+     <footer>
+        <p>Skapad av: Stellan Benckert</p>
+        <p>Kurs: Webbteknik 3 - 1ME323</p>
+        <p>Användarnamn: B0nken</p>
+    </footer>
 
 </body>
 </html>
