--- a/assignment2/assignment2.html
+++ b/assignment2/assignment2.html
@@ -38,5 +38,11 @@
         
     </div>
 
+     <footer>
+        <p>Skapad av: Stellan Benckert</p>
+        <p>Kurs: Webbteknik 3 - 1ME323</p>
+        <p>Användarnamn: B0nken</p>
+    </footer>
+
 </body>
 </html>
