some adjustments made for file searching

--- a/assignment2/assignment2.html
+++ b/assignment2/assignment2.html
@@ -38,7 +38,7 @@
         
     </div>
 
-     <footer>
+     <footer class="footer">
         <p>Skapad av: Stellan Benckert</p>
         <p>Kurs: Webbteknik 3 - 1ME323</p>
         <p>Användarnamn: B0nken</p>
