--- a/assignment1/assignment1.html
+++ b/assignment1/assignment1.html
@@ -23,7 +23,7 @@
         </p>
     </main>
 
-     <footer>
+     <footer class="footer">
         <p>Skapad av: Stellan Benckert</p>
         <p>Kurs: Webbteknik 3 - 1ME323</p>
         <p>Användarnamn: B0nken</p>
