--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>Skapad av: Stellan Benckert</p>
         <p>Kurs: Webbteknik 3 - 1ME323</p>
         <p>Användarnamn: B0nken</p>
