--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webbteknik 3 - 1ME323</title>
-    <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="./global.css">
     <script src="js/main.js" type="module"></script>
     
 </head>
